syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "../pb"; // Workaround to add a slash
package remodrive;

service RemoDrive {
    rpc Drive(stream DriverMessage) returns (google.protobuf.Empty) {}
    rpc Host(google.protobuf.StringValue) returns (stream DriverMessage) {}
    rpc CloseRoom(google.protobuf.StringValue) returns (google.protobuf.Empty) {}
}

message DriverMessage {
    string Room = 1;
    string Command = 2;
}